fixed base css for header and footer on mobile.

--- a/templeinn/css/base.css
+++ b/templeinn/css/base.css
@@ -14,25 +14,28 @@ p, ul, ol {
     width: 175px;
 }
 .headerlogo{
-    grid-column: 1/2;
-    grid-row: 1/2;
     padding-top: 25px;
 }
 
 .headerlogo img{
     margin: 25px;
     border: 3px solid #392F5A;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #date{
     border: 2px solid #4b4269;
     padding: 5px;
-
     background-color: #FFF;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: fit-content;
 }
+
 .headerdate{
-    margin-top: 30px;
-    margin-left: 25px;
     grid-column: 1 / 2;
     grid-row: 2 / 3;
 }
@@ -52,6 +55,7 @@ p, ul, ol {
     grid-column: 2/3;
     list-style: none;
     display: block;
+    margin-left: 30px;
 }
 
 #headernav a{
@@ -81,7 +85,7 @@ p, ul, ol {
 .socialnav li{
     list-style: none;
     display: inline-block;
-    margin-right: 25px;
+    margin-right: 30px;
 }
 
 .indexhome{
@@ -91,8 +95,6 @@ p, ul, ol {
 }
 
 .banner{
-    grid-column: 2/3;
-    grid-row: 2/3;
     background-color: #208B3A;
     color: #FFF;
     width: fit-content;
@@ -100,39 +102,36 @@ p, ul, ol {
     align-items: center;
     justify-content: center;
     padding-top: 20px;
-    margin-left: 20px;
-    margin-right: 20px;
+    padding-bottom: 20px;
+    margin-left: auto;
+    margin-right: auto;
     border: 3px solid #000;
 }
 
 .face, .twit{
-        /****fix this*****/
     background-color: #000;
     border: 2px solid #000;
  
 }
 
 .social{
-        /****fix this*****/
     list-style-type: none;
     grid-row: 2/3;
 
 }
 
 .social li a{
-        /****fix this*****/
     margin-top: 25px;
     display: inline-flex;
     flex-direction: row;
     align-items: flex-end;
     justify-content: flex-end;
+    margin-left: 20px;
 }
 
 .siteheader{
-    display: grid;
-    grid-template-columns: 50% 50%;
-    grid-template-rows: 66% 33%;
-    grid-column-gap: 10px;
+    display: flex;
+    flex-direction: column;
     margin: 40px;
     border: 10px solid #B78627;
     border-radius: 5px;
@@ -153,41 +152,31 @@ p, ul, ol {
     border: 10px solid #B78627;
     border-radius: 5px;
     background-color: #ffee99;
-    display: grid;
-    grid-template-columns: 50% 50%;
-    grid-template-rows: 40% 40% 20%;
+    display: flex;
+    flex-direction: column;
 }
 .footerlogo img{
     display: block;
-    margin-left: 20px;
+    margin-left: auto;
     margin-right: auto;
     margin-top: 20px;
     border: 3px solid #392F5A;
-    grid-column: 1/2;
-    grid-row: 1/2;
 }
 .footcontact{
     text-align: center;
     margin-bottom: 20px;
-    grid-column: 1/2;
-    grid-row: 2/3;
 }
 .footmap{
     text-align: center;
-    grid-column: 2/3;
-    grid-row: 1/3;
     margin-bottom: 30px;
 }
 
 .mapimage img{
     width: 150px;
-    margin-top: 20px;
     border: 3px solid #392F5A;
 }
 .copyinfo{
     text-align: center;
-    grid-row: 3/4;
-    grid-column: 1/3;
     border-top: 1px solid #000;
     margin: 0 20px;
 }
@@ -218,10 +207,11 @@ nav ul.open{
 nav button{
 	background-color: #fff;
 	border: 2px solid #555;
-	font-size: 1.5rem;
-    position: relative;
-    top: -40px;
-    margin-left: 20px;
+	font-size: 2.5rem;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
 }
 /************ CONTACT THANK YOU PAGE *************/
 #contactthanks, #resthanks{
