--- a/templeinn/css/medium.css
+++ b/templeinn/css/medium.css
@@ -2,10 +2,110 @@
     .socialnav ul{
         display: block; 
      }
+
      .mapimage img{
         width: 225px;
     }
+
+    .social li a{
+        margin-top: 25px;
+        display: inline-flex;
+        flex-direction: row;
+        align-items: flex-end;
+        justify-content: flex-end;
+    }
+
+    .siteheader{
+        display: grid;
+        grid-template-columns: 50% 50%;
+        grid-template-rows: 66% 33%;
+        grid-column-gap: 10px;
+    }
+    .headerlogo{
+        grid-column: 1/2;
+        grid-row: 1/2;
+        padding-top: 25px;
+    }
+    
+    .headerlogo img{
+        margin: 25px;
+        border: 3px solid #392F5A;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .headerdate{
+        margin-top: 30px;
+        grid-column: 1 / 2;
+        grid-row: 2 / 3;
+    }
+    
+    #header2{
+        grid-column: 2/3;
+    }
+
+    #headernav li{
+        grid-row: 1/2;
+        grid-column: 2/3;
+        list-style: none;
+        display: block;
+    }
+    .banner{
+        grid-column: 2/3;
+        grid-row: 2/3;
+        padding-top: 20px;
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+       
+    .social{
+        grid-row: 2/3;
+    }
+
     .footerlogo img{
         margin-left: auto;
+    }
+
+    .templefooter{
+        display: grid;
+        grid-template-columns: 50% 50%;
+        grid-template-rows: 40% 40% 20%;
+    }
+    .footerlogo img{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 20px;
+        grid-column: 1/2;
+        grid-row: 1/2;
+    }
+    .footcontact{
+        margin-bottom: 20px;
+        grid-column: 1/2;
+        grid-row: 2/3;
+    }
+    .footmap{
+        grid-column: 2/3;
+        grid-row: 1/3;
+        margin-bottom: 30px;
+    }
+    
+    .mapimage img{
+        width: 250px;
+        margin-top: 20px;
+    }
+    .copyinfo{
+        grid-row: 3/4;
+        grid-column: 1/3;
+        margin: 0 20px;
+    }
+    nav button{
+        background-color: #fff;
+        border: 2px solid #555;
+        font-size: 1.5rem;
+        position: relative;
+        top: -40px;
+        margin-left: 20px;
     }
 }
